# LoadBalancer

./: .gitignore  CMakeLists.txt  README.md  client_sim
config/: servers.json
include/: backend.hpp  client_sim.hpp  common.hpp  lb_strategy.hpp  load_balancer.hpp  server_sim.hpp
src/: backend.cpp  client_sim.cpp  load_balancer.cpp  main_client.cpp  main_lb.cpp  main_server.cpp  server_sim.cpp
tools/: kill_all.sh  run_clients.sh  run_servers.sh
